// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-bxtkkv-0 gRyAxt"
>
  <h1
    class="profiles__Title-bxtkkv-1 hIcTpo"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 hybA-dO"
  >
    <li
      class="profiles__Item-bxtkkv-5 ecCVZI"
    >
      <img
        class="profiles__Picture-bxtkkv-3 jlFEUi"
        data-testid="profile-picture"
        src="/images/users//images/soomin.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-4 imwOXw"
      >
        Soomin Jang
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-bxtkkv-0 gRyAxt"
>
  <h1
    class="profiles__Title-bxtkkv-1 hIcTpo"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 hybA-dO"
  >
    <li
      class="profiles__Item-bxtkkv-5 ecCVZI"
    >
      <img
        class="profiles__Picture-bxtkkv-3 jlFEUi"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-bxtkkv-4 imwOXw"
      >
        Soomin Jang
      </p>
    </li>
  </ul>
</div>
`;
